tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/fault_abort/a/to_b/_test_context/VirtualService.227675886.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - fault:
      abort:
        httpStatus: 418
        percentage:
          value: 100
    route:
    - destination:
        host: b
